[package]
name = "rafka-reboot"
version = "0.1.0"
edition = "2024"

[dependencies]
broker  = { version = "0.1.0", path = "crates/broker"  }
client  = { version = "0.1.0", path = "crates/client"  } 
cbridge = { version = "0.1.0", path = "crates/cbridge" }
util    = { version = "0.1.0", path = "crates/util"    }

[workspace]
members = [
    "crates/broker" ,
    "crates/client",
    "crates/cbridge", 
    "crates/util"   , "crates/cli",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
rkyv =  { version = "0.8.11" }
dashmap = "6.1.0"
thiserror = "1.0"
