[package]
name = "rafka"
version = "0.1.0"
edition = "2024"

[dependencies]
broker  = { version = "0.1.0", path = "crates/broker"  }
client  = { version = "0.1.0", path = "crates/client"  } 
util    = { version = "0.1.0", path = "crates/util"    }
tokio.workspace = true

[workspace]
members = [
    "crates/broker" ,
    "crates/client",
    "crates/util"   , 
]

[workspace.dependencies]
tokio =     { version = "1", features = ["full"] }
rkyv =      { version = "0.8" }
dashmap =   { version = "6.1.0" }
thiserror = { version = "1.0" }
